<resources>
    <string name="app_name">MovieSchedules</string>
    <string name="action_settings">Settings</string>
    <string name="imdb">IMDb</string>
    <string name="title">title</string>
    <string name="year">years</string>
    <string name="movie">movie</string>
    <string name="type">Type :</string>
    <string name="tahun">Tahun :</string>
    <string name="share">Share</string>
    <string name="tahun_movie">Tahun Untuk Movie :</string>
    <string name="tahun_series">Tahun Untuk Series :</string>
</resources>
