<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_margin="25dp"
              android:layout_height="match_parent">
    <TextView android:layout_width="match_parent"
              android:text="@string/type"
              android:textStyle="bold"
              android:layout_margin="10dp"
              android:textSize="15sp"
              android:layout_height="wrap_content"/>
    <Spinner android:layout_width="match_parent"
             android:id="@+id/spinner1"
             android:layout_margin="10dp"
             android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent"
              android:text="@string/tahun_movie"
              android:layout_margin="10dp"
              android:textStyle="bold"
              android:textSize="15sp"
              android:layout_height="wrap_content"/>
    <Spinner android:layout_width="match_parent"
             android:id="@+id/spinner2"
             android:layout_margin="10dp"
             android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent"
              android:text="@string/tahun_series"
              android:layout_margin="10dp"
              android:textStyle="bold"
              android:textSize="15sp"
              android:layout_height="wrap_content"/>
    <Spinner android:layout_width="match_parent"
             android:id="@+id/spinner4"
             android:layout_margin="10dp"
             android:layout_height="wrap_content"/>
</LinearLayout>