<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent"
                      android:orientation="horizontal"
                      android:layout_height="wrap_content">
           <ImageView android:layout_width="90dp"
                      android:src="@drawable/splash"
                      android:layout_margin="10dp"
                      android:id="@+id/gambar"
                      android:layout_height="150dp"/>

            <LinearLayout android:layout_width="match_parent"
                          android:orientation="vertical"
                          android:layout_margin="10dp"
                          android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent"
                          android:id="@+id/title"
                          android:textSize="15sp"
                          android:textStyle="bold"
                          android:text="@string/title"
                          android:layout_height="wrap_content"/>

                    <TextView android:layout_width="match_parent"
                              android:id="@+id/type"
                              android:text="@string/movie"
                              android:textSize="15sp"
                              android:textColor="@color/colorAccent"
                              android:textStyle="bold"
                              android:layout_height="wrap_content"/>

                    <TextView android:layout_width="match_parent"
                              android:id="@+id/year"
                              android:layout_marginTop="10dp"
                              android:textColor="@color/colorAccent"
                              android:textSize="15sp"
                              android:text="@string/year"
                              android:layout_height="match_parent"/>



            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>