<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.DetailsMovies">
    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
        <ImageView android:layout_width="70dp"
                   android:src="@drawable/logo"
                   android:layout_height="30dp"/>

    </android.support.v7.widget.Toolbar>
    <android.support.v7.widget.CardView android:layout_width="match_parent"
                                        android:layout_margin="10dp"
                                        android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent"
                      android:orientation="horizontal"
                      android:layout_height="wrap_content">
            <ImageView android:layout_width="90dp"
                       android:id="@+id/gbr"
                       android:layout_margin="5dp"
                       android:src="@drawable/logo"
                       android:layout_height="150dp"/>
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_margin="10dp"
                          android:orientation="vertical"
                          android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent"
                          android:textSize="15sp"
                          android:textStyle="bold"
                          android:id="@+id/tite"
                          android:text="@string/title"
                          android:layout_height="wrap_content"/>
                <TextView android:layout_width="match_parent"
                          android:textSize="15sp"
                          android:textStyle="bold"
                          android:id="@+id/type"
                          android:textColor="@color/colorAccent"
                          android:text="@string/movie"
                          android:layout_height="wrap_content"/>
                <TextView android:layout_width="match_parent"
                          android:textSize="15sp"
                          android:id="@+id/year"
                          android:textColor="@color/colorAccent"
                          android:text="@string/year"
                          android:layout_height="wrap_content"/>

                <LinearLayout android:layout_width="match_parent"
                              android:orientation="horizontal"
                              android:layout_height="wrap_content">
                    <TextView android:layout_width="wrap_content"
                              android:textSize="15sp"
                              android:drawableLeft="@drawable/ic_access_time_black_24dp"
                              android:id="@+id/runtime"
                              android:text="@string/year"
                              android:layout_height="wrap_content"/>

                    <TextView android:layout_width="wrap_content"
                              android:textSize="15sp"
                              android:layout_marginLeft="10dp"
                              android:id="@+id/rated"
                              android:text="@string/year"
                              android:drawableLeft="@drawable/ic_stars_black_24dp"
                              android:layout_height="wrap_content"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView android:layout_width="match_parent"
                                        android:layout_margin="10dp"
                                        android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content"
                  android:textSize="15sp"
                  android:layout_margin="10dp"
                  android:layout_marginLeft="10dp"
                  android:id="@+id/genre"
                  android:text="@string/year"
                  android:drawableLeft="@drawable/ic_theaters_black_24dp"
                  android:layout_height="wrap_content"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView android:layout_width="match_parent"
                                        android:layout_margin="10dp"
                                        android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_margin="10dp"
                      android:layout_height="wrap_content">
            <TextView android:layout_width="match_parent"
                      android:id="@+id/director"
                      android:drawableLeft="@drawable/ic_face_black_24dp"
                      android:layout_height="wrap_content"/>
            <TextView android:layout_width="match_parent"
                      android:id="@+id/actor"
                      android:drawableLeft="@drawable/ic_recent_actors_black_24dp"
                      android:layout_height="wrap_content"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
<android.support.v7.widget.CardView android:layout_width="match_parent"
                                    android:layout_margin="10dp"
                                    android:layout_height="wrap_content">
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:layout_margin="10dp"
                  android:layout_height="wrap_content">
        <TextView android:layout_width="match_parent"
                  android:text="@string/share"
                  android:textStyle="bold"
                  android:drawableEnd="@drawable/ic_share_black_24dp"
                  android:layout_height="wrap_content"/>
<LinearLayout android:layout_width="match_parent"
              android:orientation="horizontal"
              android:layout_height="wrap_content">
    <ImageView android:layout_width="wrap_content"
               android:src="@drawable/wa"
               android:id="@+id/wa"
               android:onClick="waShare"
               android:layout_height="wrap_content"/>
    <ImageView android:layout_width="wrap_content"
               android:src="@drawable/facebook"
               android:onClick="fbshare"
               android:layout_marginStart="10dp"
               android:id="@+id/fb"
               android:layout_height="wrap_content"/>

</LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>

</LinearLayout>